﻿[B]1.5.3[/B]
- client.py visszaállás
- netmozi.py módosítása a client.py csere miatt

[B]1.5.2[/B]
- filminvazio kiszolgáló frissítve

[B]1.5.1[/B]
- netmozi kiszolgáló hozzáadva
- filmezek kiszolgáló frissítve
- filmezz kiszolgáló frissítve
- filmbaratok kiszolgáló eltávolítva
- filmneked kiszolgáló eltávolítva
- filmtornado kiszolgáló eltávolítva
- onlinefilmek kiszolgáló eltávolítva
- sorozatkatalogis kiszolgáló eltávolítva
- filminvazio kiszolgáló eltávolítva

[B]1.5.0[/B]
- dmdamedia kiszolgáló hozzáadva
- onlinefilmvilag2 kiszolgáló hozzáadva

[B]1.4.0[/B]
- Magyar kiszolgáló frissítések
- NETMOZI kiszolágló eltávolítva
- Angol kiszolgáló frissítések
- Cached kiszolgálók (endegélyezhető a beállításokban - Real-Debrid vagy Premiumize fiók szükséges)
- Jelenleg a mozikban szekció javítva
- Új szekciók a Filmekben: Legjobbra értékelt, Új lemezes megjelenések
- Új szekció a Sorozatokban: Legjobbra értékelt
- Az 'IMDb Infó' információs ablak javítva

[B]1.3.3[/B]
NEM HIVATALOS VERZIÓ

[B]1.3.2[/B]
NEM HIVATALOS VERZIÓ

[B]1.3.1[/B]
- FILMGO kiszolgáló frissítés
- FILMTORNADO kiszolgáló frissítés
- HDFILMEK kiszolgáló frissítés
- NONSTOPMOZI kiszolgáló frissítés
- SRTV kiszolgáló frissítés
- Letöltés javítva
- Lehetőség van kiszolgálók importálására (elérhető a beállításokban)
(A zip fájl elnevezésének a következőképpen kell kinéznie: es_providers_hu.zip)
- A találati statisztikák lementhetők a hibanaplóba (endegélyezhető a beállításokban)
- Új angol kiszolgálók (CUTEMOVIE, MOVIESCO, PANDAMOVIE, RLSSCN, TIMEWATCH)
- Angol kiszolgáló frissítések (BEETV, CARTOONHD, DAREWATCH, FILEPURSUIT,
FILMXY, FULL4MOVIES, HASTI, IOMOVIE, MOVIE4UCH, MOVIEWATCHER, MYVIDEOLINK,
NINEMOVIES, OPENLOADMOVIES, PROJECTFREE, SERIESONLINE, SOLARMOVIE, VMOOVE)
- Új német kiszolgálók (CINEMATRIX, CINEMAXX, HDKINO, MOVIE4K-LT)
- Német kiszolgáló frissítések (FILMPALAST, FOXX, HDFILME, MOOVIE, MOVIE2K-SH, MOVIE4K, MOVIETOWN, PROXER)

[B]1.3.0[/B]