@@ -1,4 +1,4 @@
-﻿<addon id="plugin.video.exoshark" version="1.5.3" name="ExoShark" provider-name="ExoShark">
+﻿<addon id="plugin.video.exoshark" version="1.5.4" name="ExoShark" provider-name="ExoShark">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.exoshark.artwork" version="1.0.0" />
@@ -32,7 +32,8 @@
 			<screenshot>resources/screenshots/screenshot-02.jpg</screenshot>
 			<screenshot>resources/screenshots/screenshot-03.jpg</screenshot>
 		</assets>
-		<news>- client.py visszaállás
-- netmozi.py módosítása a client.py csere miatt</news>
+		<news>- filmvilag2 kigészítő cím összehasonlítás a téves találatok miatt
+- netmozi kiegészítő IMDB azonosító összehasonlítás a téves találatok miatt
+</news>
 	</extension>
 </addon>
